// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-file Should display error when maxSize is exceeded 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--has-error">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
        <div class="mg-c-input__file-item">
          <span class="mg-c-input__file-item-name">
            batman
          </span>
          <span class="mg-c-input__file-item-size">
            10octets
          </span>
          <mg-button ara-controls="identifier identifier-file-list" aria-disabled="false" aria-label="Delete file" class="mg-c-input__file-delete-button" is-icon="" role="button" tabindex="0" type="button">
            <template shadowrootmode="open">
              <div class="mg-c-button mg-c-button--flat mg-c-button--icon mg-c-button--medium">
                <div class="mg-c-button__content">
                  <slot></slot>
                </div>
              </div>
            </template>
            <mg-icon>
              <template shadowrootmode="open">
                <svg aria-hidden="true" class="mg-c-icon mg-c-icon--cross mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                  <path d="M2 2.707 2.707 2l11.29 11.289-.708.707z" fill="currentColor"></path>
                  <path d="M2.707 14 2 13.293 13.293 2l.707.708z" fill="currentColor"></path>
                </svg>
              </template>
            </mg-icon>
          </mg-button>
        </div>
      </div>
      <div id="identifier-help-text" slot="help-text">
        Maximum size: 5octets
      </div>
      <div id="identifier-error" slot="error">
        The file size exceeds the maximum allowed size of 5octets
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args {
  tooltip: 'My Tooltip Message',
  tooltipPosition: 'input',
  labelOnTop: true
}: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--label-on-top">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon>
              <template shadowrootmode="open">
                <svg aria-hidden="true" class="mg-c-icon mg-c-icon--info-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                  <path clip-rule="evenodd" d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0m-7.75 4V7h1.5v5zm0-8v1.5h1.5V4z" fill="currentColor" fill-rule="evenodd"></path>
                </svg>
              </template>
            </mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args { accept: '.pdf' }: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input accept=".pdf" aria-describedby="identifier-help-text" aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-help-text" slot="help-text">
        Accepted extensions: .pdf
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args { accept: '.pdf', maxSize: 5000 }: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input accept=".pdf" aria-describedby="identifier-help-text" aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-help-text" slot="help-text">
        Maximum size: 5Ko. Accepted extensions: .pdf
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args { labelHide: true }: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title mg-u-visually-hidden">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args { labelOnTop: true }: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--label-on-top">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args { maxSize: 5000 }: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-help-text" slot="help-text">
        Maximum size: 5Ko
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args { required: true, disabled: true }: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--disabled mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" disabled="" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="true" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args { required: true, disabled: true, value: [Array] }: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--disabled mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" disabled="" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="true" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
        <div class="mg-c-input__file-item">
          <span class="mg-c-input__file-item-name">
            batman
          </span>
          <span class="mg-c-input__file-item-size">
            12octets
          </span>
          <mg-button ara-controls="identifier identifier-file-list" aria-disabled="true" aria-label="Delete file" class="mg-c-input__file-delete-button" is-icon="" role="button" tabindex="0" type="button">
            <template shadowrootmode="open">
              <div class="mg-c-button mg-c-button--disabled mg-c-button--flat mg-c-button--icon mg-c-button--medium">
                <div class="mg-c-button__content">
                  <slot></slot>
                </div>
              </div>
            </template>
            <mg-icon>
              <template shadowrootmode="open">
                <svg aria-hidden="true" class="mg-c-icon mg-c-icon--cross mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                  <path d="M2 2.707 2.707 2l11.29 11.289-.708.707z" fill="currentColor"></path>
                  <path d="M2.707 14 2 13.293 13.293 2l.707.708z" fill="currentColor"></path>
                </svg>
              </template>
            </mg-icon>
          </mg-button>
        </div>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args { required: true, value: [Array], helpText: 'My help text' }: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
        <div class="mg-c-input__file-item">
          <span class="mg-c-input__file-item-name">
            batman
          </span>
          <mg-button ara-controls="identifier identifier-file-list" aria-disabled="false" aria-label="Delete file" class="mg-c-input__file-delete-button" is-icon="" role="button" tabindex="0" type="button">
            <template shadowrootmode="open">
              <div class="mg-c-button mg-c-button--flat mg-c-button--icon mg-c-button--medium">
                <div class="mg-c-button__content">
                  <slot></slot>
                </div>
              </div>
            </template>
            <mg-icon>
              <template shadowrootmode="open">
                <svg aria-hidden="true" class="mg-c-icon mg-c-icon--cross mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                  <path d="M2 2.707 2.707 2l11.29 11.289-.708.707z" fill="currentColor"></path>
                  <path d="M2.707 14 2 13.293 13.293 2l.707.708z" fill="currentColor"></path>
                </svg>
              </template>
            </mg-icon>
          </mg-button>
        </div>
      </div>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args { tooltip: 'My Tooltip Message' }: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
            <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
              <mg-icon>
                <template shadowrootmode="open">
                  <svg aria-hidden="true" class="mg-c-icon mg-c-icon--info-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                    <path clip-rule="evenodd" d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0m-7.75 4V7h1.5v5zm0-8v1.5h1.5V4z" fill="currentColor" fill-rule="evenodd"></path>
                  </svg>
                </template>
              </mg-icon>
            </mg-tooltip>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args { tooltip: 'My Tooltip Message', labelOnTop: true }: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--label-on-top">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon>
              <template shadowrootmode="open">
                <svg aria-hidden="true" class="mg-c-icon mg-c-icon--info-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                  <path clip-rule="evenodd" d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0m-7.75 4V7h1.5v5zm0-8v1.5h1.5V4z" fill="currentColor" fill-rule="evenodd"></path>
                </svg>
              </template>
            </mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args { tooltip: 'My Tooltip Message', tooltipPosition: 'label' }: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon>
              <template shadowrootmode="open">
                <svg aria-hidden="true" class="mg-c-icon mg-c-icon--info-circle mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                  <path clip-rule="evenodd" d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0m-7.75 4V7h1.5v5zm0-8v1.5h1.5V4z" fill="currentColor" fill-rule="evenodd"></path>
                </svg>
              </template>
            </mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args { value: [Array] }: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
        <div class="mg-c-input__file-item">
          <span class="mg-c-input__file-item-name">
            batman
          </span>
          <span class="mg-c-input__file-item-size">
            12octets
          </span>
          <mg-button ara-controls="identifier identifier-file-list" aria-disabled="false" aria-label="Delete file" class="mg-c-input__file-delete-button" is-icon="" role="button" tabindex="0" type="button">
            <template shadowrootmode="open">
              <div class="mg-c-button mg-c-button--flat mg-c-button--icon mg-c-button--medium">
                <div class="mg-c-button__content">
                  <slot></slot>
                </div>
              </div>
            </template>
            <mg-icon>
              <template shadowrootmode="open">
                <svg aria-hidden="true" class="mg-c-icon mg-c-icon--cross mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                  <path d="M2 2.707 2.707 2l11.29 11.289-.708.707z" fill="currentColor"></path>
                  <path d="M2.707 14 2 13.293 13.293 2l.707.708z" fill="currentColor"></path>
                </svg>
              </template>
            </mg-icon>
          </mg-button>
        </div>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args { value: [Array], multiple: true }: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" multiple="" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
        <div class="mg-c-input__file-list-container">
          <ul class="mg-c-input__file-list" id="identifier-file-list" role="list">
            <li class="mg-c-input__file-item">
              <span class="mg-c-input__file-item-name">
                batman
              </span>
              <span class="mg-c-input__file-item-size">
                12octets
              </span>
            </li>
            <li class="mg-c-input__file-item">
              <span class="mg-c-input__file-item-name">
                joker
              </span>
              <span class="mg-c-input__file-item-size">
                12octets
              </span>
            </li>
          </ul>
          <mg-button ara-controls="identifier identifier-file-list" aria-disabled="false" aria-label="Delete file" class="mg-c-input__file-delete-button" is-icon="" role="button" tabindex="0" type="button">
            <template shadowrootmode="open">
              <div class="mg-c-button mg-c-button--flat mg-c-button--icon mg-c-button--medium">
                <div class="mg-c-button__content">
                  <slot></slot>
                </div>
              </div>
            </template>
            <mg-icon>
              <template shadowrootmode="open">
                <svg aria-hidden="true" class="mg-c-icon mg-c-icon--cross mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                  <path d="M2 2.707 2.707 2l11.29 11.289-.708.707z" fill="currentColor"></path>
                  <path d="M2.707 14 2 13.293 13.293 2l.707.708z" fill="currentColor"></path>
                </svg>
              </template>
            </mg-icon>
          </mg-button>
        </div>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with args {}: 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with interactive helpText 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-help-text" slot="help-text">
        <a href="#">
          My help text
        </a>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with interactive helpText 2`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-help-text" slot="help-text">
        <a href="#">
          My help text
        </a>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should render with interactive helpText 3`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-help-text" slot="help-text">
        <a href="#">
          My help text
        </a>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should update in case next state is validity ({ validity: false, valueMissing: true }), valueMissing (%s) 1`] = `
<mg-input-file patternerrormessage="Non">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--has-error">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file Should update in case next state is validity ({ validity: false, valueMissing: true }), valueMissing (%s) 2`] = `
<mg-input-file patternerrormessage="Non">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--disabled mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" disabled="" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="true" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file events Should handle delete file button click, ({ value: [Array] }) 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file events Should handle delete file button click, ({ value: [Array], multiple: true }) 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" multiple="" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file events Should handle input change event 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
        <div class="mg-c-input__file-item">
          <span class="mg-c-input__file-item-name">
            batman
          </span>
          <span class="mg-c-input__file-item-size">
            12octets
          </span>
          <mg-button ara-controls="identifier identifier-file-list" aria-disabled="false" aria-label="Delete file" class="mg-c-input__file-delete-button" is-icon="" role="button" tabindex="0" type="button">
            <template shadowrootmode="open">
              <div class="mg-c-button mg-c-button--flat mg-c-button--icon mg-c-button--medium">
                <div class="mg-c-button__content">
                  <slot></slot>
                </div>
              </div>
            </template>
            <mg-icon>
              <template shadowrootmode="open">
                <svg aria-hidden="true" class="mg-c-icon mg-c-icon--cross mg-c-icon--size-medium" fill="none" focusable="false" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                  <path d="M2 2.707 2.707 2l11.29 11.289-.708.707z" fill="currentColor"></path>
                  <path d="M2.707 14 2 13.293 13.293 2l.707.708z" fill="currentColor"></path>
                </svg>
              </template>
            </mg-icon>
          </mg-button>
        </div>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods displayError display error message with locale: fr 1`] = `
<mg-input-file lang="fr">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--has-error">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Parcourir…
        </mg-button>
      </div>
      <div id="identifier-error" slot="error">
        Ce champ est obligatoire.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods displayError display error message with locale: xx 1`] = `
<mg-input-file lang="xx">
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--has-error">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods displayError display error with displayError component's public method 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods displayError display error with displayError component's public method 2`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--has-error">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods reset Should reset displayed error, lock false 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--has-error">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-error" slot="error">
        Message d'erreur de test
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods reset Should reset displayed error, lock false 2`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods reset Should reset displayed error, lock true 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--has-error">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-error" slot="error">
        Message d'erreur de test
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods reset Should reset displayed error, lock true 2`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods setError Should display override error with setError component's public method ({ valid: false, lock: false }) 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods setError Should display override error with setError component's public method ({ valid: false, lock: false }) 2`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--has-error">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-error" slot="error">
        Override error
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods setError Should display override error with setError component's public method ({ valid: false, lock: false }) 3`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--has-error">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods setError Should display override error with setError component's public method ({ valid: false, lock: true }) 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods setError Should display override error with setError component's public method ({ valid: false, lock: true }) 2`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--has-error">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-error" slot="error">
        Override error
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods setError Should display override error with setError component's public method ({ valid: false, lock: true }) 3`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--has-error">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-error" slot="error">
        Override error
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods setError Should display override error with setError component's public method ({ valid: true, lock: false }) 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods setError Should display override error with setError component's public method ({ valid: true, lock: false }) 2`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods setError Should display override error with setError component's public method ({ valid: true, lock: false }) 3`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--has-error">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods setError Should display override error with setError component's public method ({ valid: true, lock: true }) 1`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods setError Should display override error with setError component's public method ({ valid: true, lock: true }) 2`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-invalid="false" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;

exports[`mg-input-file methods setError Should display override error with setError component's public method ({ valid: true, lock: true }) 3`] = `
<mg-input-file>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--file mg-c-input--has-error">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <div class="mg-c-input__file-container">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-u-visually-hidden" id="identifier" name="identifier" required="" tabindex="-1" type="file">
        <mg-button aria-controls="identifier" aria-disabled="false" class="mg-c-input__file-button" role="button" tabindex="0" type="button">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          Browse…
        </mg-button>
      </div>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          label
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </template>
</mg-input-file>
`;
